[package]
name = "ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
cron = "0.12.0"
pretty_env_logger = "0.5.0"
tokio-postgres = "0.7.10"
warp = "0.3"
