[package]
name = "ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15"
chrono = "0.4.31"
cron = "0.12.0"
jwt-simple = "0.10"
pretty_env_logger = "0.5.0"
serde = "1.0.192"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
warp = "0.3"
